Update daily menu

--- a/menu/ambient-menu.html
+++ b/menu/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 25. 08. 2021</h5>
+<h5>Čtvrtek, 26. 08. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Naši milí strávníci. V období 18.8.- 20.8. si bere Aduš &amp; Honzík čas na odpočinek a relax, proto bude NAŠE/VAŠE jídelna ZAVŘENA, z důvodu ,,DOVOLENÉ” . DĚKUJEME ZA POCHOPENÍ</strong>
@@ -56,16 +56,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Žampionový krém se zakysanou smetanou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta na česneku s anglickou slaninou , dušená jasmínová rýže</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová kaše s esa párečky (96% masa, bezlepkové), škvarky s cibulí, kyselá okurka </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na tálu s grilovanými rajčaty, pečené brambory s kmínem, česnekový dip</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 170g Kapsa z vepřové pečeně plněná sušenými rajčaty, sýrem a vejcem, celerové pyré, rukola, opečená paprika</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine s jemnou omáčkou z modrého sýra, plátkovaná kuřecí prsa, rukola</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na fazolových luscích s kukuřicí, smažené hranolky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny, ochucený citronovým dresingem, stripsy z vepřové panenky, vařené vejce</td><td class="menuPrice">135,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Roláda z vepřové pečeně plněná anglickou slaninou, pórkem a kapií, mačkané brambory s cibulkou</td><td class="menuPrice">109,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové kuličky v rajské omáčce, kynuté houskové knedlíky</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Španělský vepřový ptáček, dušená jasmínová rýže</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kroupové rizoto zjemněné smetanou s červenou řepou a zakysanou smetanou, kuřecí medailonky, strouhaný parmazán</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Lasagne s boloňským ragú, bešamelem a sýrem, salát coleslaw</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s opečenou klobásou, pečené brambory s kmínem, mexický dip</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, zeleninové lečo s vejci, brokolice gratinovaná sýrem</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák , vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát ochucený majonézovým dresinkem, plátkovaná kuřecí prsa, parmazán</td><td class="menuPrice">129,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram od 15:00 do 19:00</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Sleduješ nás na instagramu? Pokud ano, tak můžeš denně od 15:00 do 19:00 hod. čerpat prázdninovou Šenkbombu. (Při objednání poprosíme prokázat sledování na telefonu. Jeden sledující = jedno jídlo denně za 77,-). </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z kuřecích prsou obalené v cornflakes, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové kotlety bez kosti, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">120g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Dukátové buchtičky s vanilkovým šodo, šlehačkou a karamel</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Dukátové buchtičky s vanilkovým šodo, šlehačkou a karamel</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0.4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -77,64 +77,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 25.8.2021</div>
+<div class="nadpis">Čtvrtek 26.8.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Frankfurtská polévka v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Frankfurtská polévka samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Moravský vrabec, dušený špenát, bramborové knedlíky, vídeňská cibulka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kuřecí steak s olivovou tapenádou a rajčaty, pečené bramborové hranolky, bylinkový dip <em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Zeleninové kari s restovaným tofu, jasmínová rýže, jarní cibulka, cherry rajčata <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>250g Bavorská bageta dle denní nabídky </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>250g Šopský salát s olivami <em title="Mléko">7</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">7. </span>200g Ovocný salát s melounem a ananasem</div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">8. </span>100g Domácí koláče s tvarohem a malinami <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">9. </span>100g Punčový dort <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -166,6 +111,11 @@ cibulkou a restovaným černým kořenem 1a,3,7,9</td>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Cibulačka se sýrovým toastem 1a,3,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Štěpánská hovězí pečeně s dušenou rýží 1a,3,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažený kuřecí řízek Savoj sypaný šunkou a sýrem s gratinovanými brambory se smetanou 1a,3,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Trhaný salát s parmskou šunkou, nivou, jablky, vlašskými ořechy, medovo hořčičným dresinkem a bagetovými chipsy 1a,3,7,8c,10</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
