Update daily menu

--- a/menu/ambient-menu.html
+++ b/menu/ambient-menu.html
@@ -183,7 +183,7 @@ cibulkou a restovaným černým kořenem 1a,3,7,9</td>
 <tr><th>RYBARNA (<a href="http://rybarna.net/denni-menu">http://rybarna.net/denni-menu</a>)</th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s grilovanym citronem a ancovickovo-bylinkovym maslem, cockovy salat s paprikami, fazolemi a zelenou cibulkou 139</li><li>Peceny filet z cerstveho morskeho dasa a tresky s grilovanym citronem a ancovickovo-bylinkovym maslem, cockovy salat s paprikami, fazolemi a zelenou cibulkou 169</li><li>Lasagne s hovezim masem, rajcaty a pecenymi paprikami zapecene ve smetanove omacce, salatek {L} 139</li><li>Burritos s bazantimi gyros prsicky, rimskym salatem a rajcaty, avokadove guacamole, pecene brambory, salatek {L} 169 </li><li>Maghrebska zapecena saksuka s rajcaty, paprikami, vejci a balkanskym syrem, korenena ryze s beluga cockou, salatek 139 </li></ol>
+<ol><li>Cerstve slavky po francouzsku na bilem vine se salotkami, smetanou a petrzelkou, pecene brambory 139</li><li>Peceny cerstvy chnapal a filet z candata s omackou z pecenych paprik, pohanka se smazenou cibulkou, salatek z cervene repy 169</li><li>Indicke kari s krutim masem, pecenou dyni, zazvorem, rajcaty a kokosovym mlekem, jasminova ryze 139</li><li>Danci burger s cedarem, cibulovym dzemem, sriracha majonezou, ledovym salatem a rajcetem, pecene brambory, salatek 169</li><li>Indicka pakora – cizrnove smazenky se zeleninou {kvetak, papriky, cibulka, cuketa} a panc phoron, pohanka se smazenou cibulkou, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
