--- a/menu/ambient-menu.html
+++ b/menu/ambient-menu.html
@@ -14,21 +14,21 @@
 						</span>
 </p>
 <p>
-<strong>Farmářská</strong>
+<strong>Hrášková s jarní cibulkou a pórkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí plátek s hlívou, slaninou a cibulkami s fritátovými brambůrky a hořčičnou majonézou</strong>
+<strong>Asijské růžové nudle s trhaným krůtím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							127,-
 						</span>
 </p>
 <p>
-<strong>Srbské vepřové rizoto se sýrem a okurkou</strong>
+<strong>Pečené kuřecí stehno na divoko s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
