Update daily menu

--- a/menu/ambient-menu.html
+++ b/menu/ambient-menu.html
@@ -7,14 +7,7 @@
 <h5>Pátek, 27. 08. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Naši milí strávníci. V období 18.8.- 20.8. si bere Aduš &amp; Honzík čas na odpočinek a relax, proto bude NAŠE/VAŠE jídelna ZAVŘENA, z důvodu ,,DOVOLENÉ” . DĚKUJEME ZA POCHOPENÍ</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							0,-
-						</span>
-</p>
-<p>
-<strong>Hrášková s jarní cibulkou a pórkem</strong>
+<strong>Houbová s uzeným masem a smetanou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
@@ -123,7 +116,7 @@ cibulkou a restovaným černým kořenem 1a,3,7,9</td>
 <tr><th>RYBARNA (<a href="http://rybarna.net/denni-menu">http://rybarna.net/denni-menu</a>)</th></tr>
 <tr>
 <td>
-<ol><li>Cerstve slavky po francouzsku na bilem vine se salotkami, smetanou a petrzelkou, pecene brambory 139</li><li>Peceny cerstvy chnapal a filet z candata s omackou z pecenych paprik, pohanka se smazenou cibulkou, salatek z cervene repy 169</li><li>Indicke kari s krutim masem, pecenou dyni, zazvorem, rajcaty a kokosovym mlekem, jasminova ryze 139</li><li>Danci burger s cedarem, cibulovym dzemem, sriracha majonezou, ledovym salatem a rajcetem, pecene brambory, salatek 169</li><li>Indicka pakora – cizrnove smazenky se zeleninou {kvetak, papriky, cibulka, cuketa} a panc phoron, pohanka se smazenou cibulkou, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny filet z norskeho slede s citronem a okurkovymi tzatziki, pecene brambory, salatek 139</li><li>Smazeny filet z cerstve norske bile tresky, bramborovy salat s cervenou repou, zelenou cibulkou, bylinkami a majonezou 165</li><li>Kubanske trhane veprove na pomerancich, cervene fazole s paprikami, jasminova ryze, salatek 139</li><li>Pikantni danci paprikas s palivymi slovenskymi paprikami a nasi slaninou, chlupate knedliky 165</li><li>Kapustove placicky s goudou, petrzelkou a smazenou cibulkou, bramborovy salat s cervenou repou, zelenou cibulkou, bylinkami a majonezou {L} 139</li></ol>
 </td>
 </tr>
 </table>
