Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><table >
-<tr><th>SRDCOVKA (<a href="http://www.jidelnasrdcovka.cz">http://www.jidelnasrdcovka.cz</a>)</th></tr>
+<tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
@@ -44,7 +44,7 @@
 </div>
 </td>
 </tr>
-<tr><th>LEDARNY (<a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach</a>)</th></tr>
+<tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
 <table class="table"><table class="table">
@@ -65,7 +65,7 @@
 </td>
 </tr>
 <table>
-<tr><th>Kuta (<a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a>)</th></tr>
+<tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
 <tr>
 <td>
 <div class="menicka">
@@ -123,7 +123,7 @@
 </tr>
 </table>
 <table>
-<tr><th>Mates (<a href="https://www.mattesrestaurace.cz">https://www.mattesrestaurace.cz</a>)</th></tr>
+<tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
 <table class="dm">
@@ -153,7 +153,7 @@ cibulkou a restovaným černým kořenem 1a,3,7,9</td>
 </tr>
 </table>
 <table>
-<tr><th>RYBARNA (<a href="http://rybarna.net/denni-menu">http://rybarna.net/denni-menu</a>)</th></tr>
+<tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
 <ol><li>Peceny filet z norskeho slede s citronem a okurkovymi tzatziki, pecene brambory, salatek 139</li><li>Smazeny filet z cerstve norske bile tresky, bramborovy salat s cervenou repou, zelenou cibulkou, bylinkami a majonezou 165</li><li>Kubanske trhane veprove na pomerancich, cervene fazole s paprikami, jasminova ryze, salatek 139</li><li>Pikantni danci paprikas s palivymi slovenskymi paprikami a nasi slaninou, chlupate knedliky 165</li><li>Kapustove placicky s goudou, petrzelkou a smazenou cibulkou, bramborovy salat s cervenou repou, zelenou cibulkou, bylinkami a majonezou {L} 139</li></ol>
