--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Sobota, 28. 08. 2021</h5>
+<h5>Neděle, 29. 08. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Houbová s uzeným masem a smetanou</strong>
@@ -52,22 +52,19 @@
 <h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Květákový smetanový krém s krutony </td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Žampionový krém se zakysanou smetanou</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová kaše s norimberskou půlmetrovou klobásou (96% masa, bezlepková), škvarky s cibulí, kyselá okurka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený řízek z kuřecích prsou, vařené brambory s máslem a šnitlíkem, citrón </td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">750g</td><td class="menuName">Pečené vepřové koleno, grilované brambory, křen, hořčice, cibule, beraní roh</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka na grilované zelenině, celerové pyré, vařené vejce, parmazán </td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně se sýrovou omáčkou, restované špecle</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine se sušenými rajčaty a rukolou, filírovaná kuřecí prsa, parmazán</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Quesadila plněná kuřecím masem, sýrem, zakysanou smetanou a kukuřicí, smažené bramborové plátky, mexický dip</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný jemným kari dresinkem, žampiony v těstíčku, vařené vejce</td><td class="menuPrice">129,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta na paprice, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kung-pao s kuřecím masem a arašídy, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr (45%) vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné pepřové omáčce, restované špecle</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta. 200g Steak z vepřové kotlety s fazolovými lusky a anglickou slaninou, celerové hranolky, zakysaná smetana</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Burger s dvojitým vepřovým masem 100g + 100g v bulce plněný salátem, sýrem, cibulí, kyselou okurkou, beraním rohem a mexickým dresinkem, smažené bramborové plátky, tatarka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">750g</td><td class="menuName">Pečené vepřové koleno, grilované brambory, křen, hořčice, cibule, beraní roh</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuskusový salát se zeleninou a olivami promíchaný olivovým olejem, medailonky z vepřové panenky, balkánský sýr</td><td class="menuPrice">135,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram od 15:00 do 19:00</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Sleduješ nás na instagramu? Pokud ano, tak můžeš denně od 15:00 do 19:00 hod. čerpat prázdninovou Šenkbombu. (Při objednání poprosíme prokázat sledování na telefonu. Jeden sledující = jedno jídlo denně za 77,-). </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z kuřecích prsou obalené v cornflakes, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové kotlety bez kosti, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">120g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody></table></table>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 <table>
@@ -76,7 +73,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 28.8.2021</div>
+<div class="nadpis">Neděle 29.8.2021</div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -110,6 +107,11 @@ cibulkou a restovaným černým kořenem 1a,3,7,9</td>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
