--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pondělí, 30. 08. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Houbová s uzeným masem a smetanou</strong>
+<strong>Čočková s párkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Dušená Vepřová plec na žampionech</strong>
+<strong>Vepřová plec na kmíně s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
 						</span>
 </p>
 <p>
-<strong>Čočka s párkem, vejcem a okurkou</strong>
+<strong>Zapečené brambory s kuřecím masem a brokolicí s okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							127,-
 						</span>
 </p>
 <p>
@@ -149,7 +149,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede s citronem a okurkovymi tzatziki, pecene brambory, salatek 139</li><li>Smazeny filet z cerstve norske bile tresky, bramborovy salat s cervenou repou, zelenou cibulkou, bylinkami a majonezou 165</li><li>Kubanske trhane veprove na pomerancich, cervene fazole s paprikami, jasminova ryze, salatek 139</li><li>Pikantni danci paprikas s palivymi slovenskymi paprikami a nasi slaninou, chlupate knedliky 165</li><li>Kapustove placicky s goudou, petrzelkou a smazenou cibulkou, bramborovy salat s cervenou repou, zelenou cibulkou, bylinkami a majonezou {L} 139</li></ol>
+<ol><li>Peceny cerstvy pstruh se salsou z cerstvych rajcat a okurek, zeleninovy kuskus, salatek {L} 139</li><li>Pecena cerstva prazma se salsou z cerstvych rajcat a okurek, zeleninovy kuskus, salatek {L} 169</li><li>Teleci brisket peceny po toskansku s rajcaty, rapikatym celerem, zampiony a zelenymi bylinkami, pecene brambory, salatek 139</li><li>Bramborove gnocchi s trhanou pecenou husou a koroptvi, pecenymi palivymi paprikami, gaj coj a parmezanem, kvasene okurky se zeleninou {L} 165</li><li>Indicke zampionove kari se zelenym hraskem, zazvorem, rajcaty a jogurtem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
