Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -149,7 +149,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh se salsou z cerstvych rajcat a okurek, zeleninovy kuskus, salatek {L} 139</li><li>Pecena cerstva prazma se salsou z cerstvych rajcat a okurek, zeleninovy kuskus, salatek {L} 169</li><li>Teleci brisket peceny po toskansku s rajcaty, rapikatym celerem, zampiony a zelenymi bylinkami, pecene brambory, salatek 139</li><li>Bramborove gnocchi s trhanou pecenou husou a koroptvi, pecenymi palivymi paprikami, gaj coj a parmezanem, kvasene okurky se zeleninou {L} 165</li><li>Indicke zampionove kari se zelenym hraskem, zazvorem, rajcaty a jogurtem, jasminova ryze 139</li></ol>
+<ol><li>Peceny cerstvy pstruh se salsou z cerstvych rajcat a okurek, zeleninovy kuskus, salatek {L} 139</li><li>Pecena cerstva prazma se salsou z cerstvych rajcat a okurek, zeleninovy kuskus, salatek {L} 169</li><li>Teleci brisket peceny po toskansku na cervenem vine s rajcaty, rapikatym celerem, zampiony a zelenymi bylinkami, pecene brambory, salatek 139</li><li>Bramborove gnocchi s trhanou pecenou husou a koroptvi, pecenymi palivymi paprikami, gaj coj a parmezanem, kvasene okurky se zeleninou {L} 165</li><li>Indicke zampionove kari se zelenym hraskem, zazvorem, rajcaty a jogurtem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
