Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Úterý, 31. 08. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Čočková s párkem</strong>
+<strong>Kapustová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec na kmíně s rýží</strong>
+<strong>Dušené hovězí na houbách s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
 						</span>
 </p>
 <p>
-<strong>Zapečené brambory s kuřecím masem a brokolicí s okurkou</strong>
+<strong>Masová quesadilla na ledovém salátku s jogurovým dresinkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
@@ -146,7 +146,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh se salsou z cerstvych rajcat a okurek, zeleninovy kuskus, salatek {L} 139</li><li>Pecena cerstva prazma se salsou z cerstvych rajcat a okurek, zeleninovy kuskus, salatek {L} 169</li><li>Teleci brisket peceny po toskansku na cervenem vine s rajcaty, rapikatym celerem, zampiony a zelenymi bylinkami, pecene brambory, salatek 139</li><li>Bramborove gnocchi s trhanou pecenou husou a koroptvi, pecenymi palivymi paprikami, gaj coj a parmezanem, kvasene okurky se zeleninou {L} 165</li><li>Indicke zampionove kari se zelenym hraskem, zazvorem, rajcaty a jogurtem, jasminova ryze 139</li></ol>
+<ol><li>Marocka tagina s kousky rybich filetu, cerstvymi slavkami, rajcaty, nakladanymi citrony, zeleninou, bylinkami a cernymi olivami, kuskus, salatek {L} 139</li><li>Peceny filet z cerstveho mecouna s citronem a thajskym chilli dzemem, korenena ryze, salatek 169</li><li>Pomalu dusene hovezi ve sladke a vonave omacce se zazvorem, hoisin a korenim peti vuni, jasminova ryze, salatek 139</li><li>Smazeny sekany teleci rizek s cedarem a petrzelkou, bramborovy salat s cervenou repou, zelenou cibulkou a majonezou, citron {L} 165</li><li>Tacos {kukuricne} s pikantnimi barbecue fazolemi, a pecenou dyni s paprikami a balkanskym syrem, salatek 139</li></ol>
 </td>
 </tr>
 </table>
